# selenium-bstack-ab

./: .env.example  .gitignore  BROWSERSTACK_SDK_MIGRATION.md  Jenkinsfile  README.md  browserstack.yml  jenkins-setup.md  pyproject.toml  test-pipeline-local.sh
docs/: README.md
docs/screenshots/browserstack/: README.md
docs/screenshots/jenkins/: README.md
pages/: base_page.py  favorites_page.py  login_page.py  product_page.py
scripts/: quality-check.sh
tests/: demo_mode_selection.py  test_base_page.py  test_basic_selenium.py  test_browserstack_config.py  test_page_objects.py  test_samsung_favorite_galaxy.py
utils/: browserstack_config.py  browserstack_validator.py  env_loader.py  logger_config.py
