[project]
name = "selenium-bstack-ab"
version = "0.1.0"
description = "BrowserStack cross-browser test automation framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.15.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "webdriver-manager>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tests", "pages", "utils"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--tb=short"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"] 