[project]
name = "selenium-bstack-ab"
version = "0.1.0"
description = "BrowserStack cross-browser test automation framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.15.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "webdriver-manager>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tests", "pages", "utils"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--tb=short"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 